# autogen-voting-extension

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_benchmarks.py  setup.py  shared_tasks.toml  test_api.py
.github/workflows/: ci.yml
benchmark_results/: quick_test_majority_20250729_193742.json  quick_test_majority_20250729_194353.json  summary_report_20250729_214356.md
benchmarks/: __init__.py  advanced_benchmarks.py  advanced_metrics.py  analysis.py  byzantine_fault_tolerance.py  competitive_analysis.py  metrics.py  real_competitor_benchmarks.py  runner.py  scenarios.py  statistical_analysis.py
docs/: conf.py  index.rst
docs/_static/: custom.css
examples/: 01_core_system_validation.py  02_voting_methods_evaluation.py  03_byzantine_fault_tolerance_analysis.py  04_natural_language_processing_evaluation.py  05_enterprise_security_compliance_validation.py  06_interactive_consensus_workbench.py  QUICK_START.md  README.md  __init__.py  advanced_example.py  basic_example.py  benchmark_example.py  scalability_example.py
src/autogen_voting/: __init__.py  config.py  security.py  voting_group_chat.py
src/votingai/: __init__.py  config.py  security.py  voting_group_chat.py
src/votingai/consensus/: __init__.py  adaptive_strategies.py  consensus_algorithms.py  deliberation_engine.py
src/votingai/core/: __init__.py  base_voting_system.py  speaker_selection_service.py  voting_manager.py  voting_protocols.py  voting_strategies.py
src/votingai/intelligence/: __init__.py  natural_language_processor.py  semantic_interpreter.py  vote_understanding.py
src/votingai/research/: __init__.py  advanced_evaluation.py  benchmarking_suite.py  evaluation_metrics.py
src/votingai/security/: __init__.py  audit_framework.py  byzantine_fault_detector.py  cryptographic_services.py
src/votingai/system/: __init__.py
src/votingai/utilities/: __init__.py  common_types.py  configuration_management.py
tests/: __init__.py  conftest.py  test_core_voting.py  test_voting_group_chat.py
